# hoxit

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  README.md  SKILLS.md  TODO.md  pyproject.toml
.agents/templates/: AGENTS.md  CLAUDE.md  CODEX.md  implementation-report.md  pr-ticket.md  review-report.md  status-board.md
.claude/skills/: cc-implementer  codex-pm  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  writing-plans
.codex/skills/: brainstorming  cc-tester  codex-architect  codex-final-review  codex-pr-planner  pos-magents  test-driven-development  using-git-worktrees  using-superpowers
Reference/: a-stock-data
docs/: API_DEVLOG.md  DEVLOG.md  IMPLEMENTATION_DESIGN.md  INTERFACES.md  IWENCAI_FALLBACK_ANALYSIS.md  SKILL_GAP_ANALYSIS.md
docs/iwencai/: README.md  comprehensive-search.md  design.md  query2data.md  routing.md  问财SkillHub.md
docs/tos-funder/: 00-overview.md  01-interface-coverage.md  02-architecture.md  03-build-plan.md  04-claude-code-guide.md  quick-guide.md  (+32 more)
hoxit/: __init__.py  cli.py  filings.py  fundamentals.py  iwencai.py  market.py  news.py  reports.py  routes.json  signals.py  tos_funder.py  utils.py  uzen.py  valuation.py  web_fallback.py
scripts/: trading-data.sh  trading-table.py
skills/: skills-tos-hoxit  skills-tos-iwencai  skills-tos-kanpan  skills-tos-periodic-review
tests/: conftest.py  test_cli.py  test_filings.py  test_fundamentals.py  test_iwencai.py  test_live_endpoints.py  test_market.py  test_news.py  test_reports.py  test_signals.py  test_tos_funder.py  test_tos_funder_migration.py  test_utils.py  test_uzen.py  test_valuation.py  test_web_fallback.py
uzen-skills/: AGENTS.md  README.md
(+167 files in other folders)
